--- a/src/app/vente/sortie/list-sortie/list-sortie.component.html
+++ b/src/app/vente/sortie/list-sortie/list-sortie.component.html
@@ -46,9 +46,9 @@
                  <!--class="label label-default text-white p-r-10"-->
                  <!--data-toggle="tooltip" title="Modifier">-->
                 <!--<i class="fa fa-pencil"></i></a>-->
-              <!--<a (click)="deleteCommande(i)" class="label label-danger text-white p-r-10"-->
-                 <!--data-toggle="tooltip" title="Confirmer">-->
-                <!--<i class="fa fa-remove"></i></a>&nbsp;-->
+              <a (click)="delete(i)" class="label label-danger text-white p-r-10"
+                 data-toggle="tooltip" title="Confirmer">
+                <i class="fa fa-remove"></i></a>&nbsp;
               <a (click)="print(sorties[i].sortie_id)" class="label label-default p-r-10"
                  data-toggle="tooltip"
                  title="Ordre de Fabrication">
