--- a/src/app/vente/sortie/add-sortie/add-sortie.component.html
+++ b/src/app/vente/sortie/add-sortie/add-sortie.component.html
@@ -3,7 +3,7 @@
   <form class="form-horizontal" role="form">
 
     <div class="form-group row">
-      <label class="col-sm-3 control-label">Employé</label>
+      <label class="col-sm-3 control-label">Employé:</label>
       <div class="col-sm-6">
         <select class="form-control" name="empSelect" id="empSelect">
           <option *ngFor="let e of employes, let i=index" value="{{i}}">{{e.nom}} {{e.prenom}}</option>
