--- a/src/app/vente/facture/add-facture/add-facture.component.html
+++ b/src/app/vente/facture/add-facture/add-facture.component.html
@@ -1,5 +1,5 @@
 <div class="card-box">
-  <h4 class="header-title m-t-0 m-b-30">Enregistrer une Commande</h4>
+  <h4 class="header-title m-t-0 m-b-30">Enregistrer une Facture</h4>
 
   <div class="row">
     <label class="col-sm-1 control-label"><h4>Client: </h4></label>
@@ -18,6 +18,15 @@
     </div>
     <div class="col-sm-3"></div>
   </div>
+
+  <div class="form-group row">
+    <label class="col-sm-1 control-label">Date d'écheance</label>
+    <div class="col-sm-5">
+      <input [(ngModel)]="facture.date_echeance" id="date_echeance" name="date_echeance"
+             placeholder="Date d'echeance" class="form-control input-md" required="" type="date">
+    </div>
+  </div>
+
   <form class="form-horizontal" role="form">
 
     <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
