--- a/src/app/vente/sortie/add-sortie/add-sortie.component.html
+++ b/src/app/vente/sortie/add-sortie/add-sortie.component.html
@@ -1,5 +1,6 @@
 <div class="card-box">
-  <h4 class="header-title m-t-0 m-b-30">Enregistrer une Sortie</h4>
+  <h4 class="header-title m-t-0 m-b-30" *ngIf="sortieId">Modifier une Sortie</h4>
+  <h4 class="header-title m-t-0 m-b-30" *ngIf="!sortieId">Enregistrer une Sortie</h4>
   <form class="form-horizontal" role="form">
 
     <div class="form-group row">
