--- a/src/app/production/lot/ajout-lot/ajout-lot.component.html
+++ b/src/app/production/lot/ajout-lot/ajout-lot.component.html
@@ -38,6 +38,14 @@
                 </select>
               </div>
             </div>
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="expiration">Expiration (jours)</label>
+              <div class="col-md-4">
+               <input [(ngModel)]="lot.expiration" id="expiration" name="expiration" type="text"
+                                      placeholder="Nombre de jours avant expiration" class="form-control input-md" required="required">
+
+              </div>
+            </div>
             <div class="  form-group">
               <div class="card-box col-md-4 col-md-offset-4 ">
                 <h4 class="header-title  m-t-0 m-b-30">Composition du Lot</h4>
@@ -93,7 +101,7 @@
             <div class="  form-group">
               <label class="col-md-4 control-label" for="quantite_calculee">Quantité Éstimée</label>
               <div *ngIf="lot.quantite_calculee!=99999" class="col-md-4">
-                {{lot.quantite_calculee}}
+                {{lot.quantite_calculee}} Pièces
               </div>
             </div>
 
@@ -105,6 +113,16 @@
                        placeholder="Quantité Voulue" class="form-control input-md" required="required">
               </div>
             </div>
+
+            <div class="  form-group">
+              <label class="col-md-4 control-label" >Coût / Prix Éstimés</label>
+              <div class="col-md-4">
+               {{lot.cout? lot.cout : 0 * lot.produit.prix}} /
+                {{lot.quantite_voulue * lot.produit.prix}} DT
+              </div>
+            </div>
+
+
             <!-- Button (Double) -->
             <div class="form-group">
               <div class="col-md-4 col-md-offset-5">
