--- a/src/app/produit-base/list-achat/list-achat.component.html
+++ b/src/app/produit-base/list-achat/list-achat.component.html
@@ -28,6 +28,9 @@
           aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Fournisseur
       </th>
       <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+          aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Remise
+      </th>
+      <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
           aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Actions
       </th>
     </tr>
@@ -45,6 +48,9 @@
       </td>
       <td>
         {{a.fournisseur.nom}}
+      </td>
+      <td>
+          <a class="label-danger label text-white" style="margin-right: 3px">{{a.remise? a.remise:0}} %</a>
       </td>
       <td>
         <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-prod-modal"
