--- a/src/app/vente/devis/list-devis/list-devis.component.html
+++ b/src/app/vente/devis/list-devis/list-devis.component.html
@@ -34,7 +34,7 @@
                    class="label label-default text-white p-r-10"
                    data-toggle="tooltip" title="Modifier">
                   <i class="fa fa-pencil"></i></a>
-                <a (click)="deleteFacture(i)" class="label label-danger text-white p-r-10"
+                <a (click)="delete(i)" class="label label-danger text-white p-r-10"
                    data-toggle="tooltip" title="Confirmer">
                   <i class="fa fa-remove"></i></a>
                 &nbsp;
