--- a/src/app/produit-base/ajout-commande/ajout-commande.component.html
+++ b/src/app/produit-base/ajout-commande/ajout-commande.component.html
@@ -14,6 +14,17 @@
       <div class="col-sm-3"></div>
     </div>
 
+    <div class="form-group row">
+      <label class="col-sm-3 control-label">Numéro du lot</label>
+      <div class="col-sm-6">
+     <input [(ngModel)]="commande.n_lot" id="commande"
+      [ngModelOptions]="{standalone: true}" name="commande" type="number"
+            placeholder="numéro du lot" class="form-control " required="">
+      </div>
+      <div class="col-sm-3"></div>
+    </div>
+
+
 
     <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
            role="grid" aria-describedby="datatable_info">
@@ -34,6 +45,9 @@
         </th>
         <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
             aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Montant par unité
+        </th>
+        <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+            aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Date d'expiration
         </th>
       </tr>
       </thead>
@@ -74,6 +88,15 @@
           {{ligne.produit_base && ligne.quantite ? ceil(ligne.cout/ligne.quantite) : 0}}
           DT/{{ligne.produit_base.unite.indice}}
         </td>
+        <td>
+          <input *ngIf="ligne.editMode==1" [(ngModel)]="ligne.date_expiration" id="date_exp"
+          [ngModelOptions]="{standalone: true}" name="date_exp" type="date"
+                    class="form-control " required="">
+          <span *ngIf="ligne.editMode==0">
+                  {{ligne.date_expiration}}
+          </span>
+        </td>
+
         <td>
           <div *ngIf="ligne.editMode!=0">
             <a (click)="confirmLigne(i)" class="on-editing save-row"
