--- a/src/app/vente/devis/list-devis/list-devis.component.html
+++ b/src/app/vente/devis/list-devis/list-devis.component.html
@@ -38,7 +38,7 @@
                    data-toggle="tooltip" title="Confirmer">
                   <i class="fa fa-remove"></i></a>
                 &nbsp;
-                <a (click)="print(factures[i].facture_id)" class="label label-default p-r-10"
+                <a (click)="print(devis[i].devis_id)" class="label label-default p-r-10"
                    data-toggle="tooltip"
                    title="Ordre de Fabrication">
                   <i class="ti-printer"></i></a>
